# murdock

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: scheduler.py
src/api/: __init__.py  auth_routes.py  feeds_routes.py  routes.py  schemas.py
src/core/: config.py  database.py
src/crawler/: feeds.py  ingest.py  sources.py
src/models/: __init__.py  tables.py
src/rag/: embeddings.py  search.py
src/services/: __init__.py  agent.py  learning.py  memory.py
src/static/: index.html
src/tools/: __init__.py  tools.py
